tui/src/bottom_pane/snapshots/agere_tui__bottom_pane__list_selection_view__tests__list_selection_col_width_mode_auto_all_rows_scroll.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_before_after_scroll_snapshot(ColumnWidthMode::AutoAllRows, 96)"
---
before scroll:
                                                                                                
  Debug                                                                                         
                                                                                                
  › 1. Item 1                                         desc 1                                    
    2. Item 2                                         desc 2                                    
    3. Item 3                                         desc 3                                    
    4. Item 4                                         desc 4                                    
    5. Item 5                                         desc 5                                    
    6. Item 6                                         desc 6                                    
    7. Item 7                                         desc 7                                    
    8. Item 8                                         desc 8                                    
                                                                                                

after scroll:
                                                                                                
  Debug                                                                                         
                                                                                                
    2. Item 2                                         desc 2                                    
    3. Item 3                                         desc 3                                    
    4. Item 4                                         desc 4                                    
    5. Item 5                                         desc 5                                    
    6. Item 6                                         desc 6                                    
    7. Item 7                                         desc 7                                    
    8. Item 8                                         desc 8                                    
  › 9. Item 9 with an intentionally much longer name  desc 9
